--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,3 +1,52 @@
-<p>
-  login works!
-</p>
+<div class="row">
+  <div class="col-md-6 mx-auto mt-5">
+    <div class="card">
+      <div class="card-header">
+        <h3 class="text-center">Iniciar Sesión</h3>
+      </div>
+      <div class="card-body">
+        <!-- formulario de inicio de sesion -->
+        <div class="container mb-3">
+          <form #loginForm="ngForm" (ngSubmit)="onSubmitLogin()">
+            <div class="form-group">
+              <label for="email">Email</label>
+              <input type="email" class="form-control" name="email" #email="ngModel" [(ngModel)]="userLogin.email" placeholder="Ingresa tu Email" required>
+              <small *ngIf="email.valid && email.touched" class="form-text text-muted">Ingresa el Email con el que creaste la cuenta</small>
+              <span *ngIf="!email.valid && email.touched" class="required small">
+                El email es obligatorio
+              </span>
+            </div>
+            <div class="form-group">
+              <label for="password">Contraseña</label>
+              <input type="password" class="form-control" name="password" #password="ngModel" [(ngModel)]="userLogin.password" placeholder="Ingresa tu contraseña" required> 
+              <small *ngIf="password.valid && password.touched" class="form-text text-muted">Ingresa tu contraseña</small>
+              <span *ngIf="!password.valid && password.touched" class="required small">
+                El debes ingresar la contraseña
+              </span>
+            </div>
+            <input class="btn btn-block btn-primary btn-lg" type="submit" value="Iniciar Sesión" [disabled]="!loginForm.form.valid">
+            <div class="col-12 text-center">
+                <span *ngIf="loginForm.form.valid" class="datatrue">
+                  Si los datos estan correctos haz click en Iniciar Sesión
+                </span>
+                <span *ngIf="!loginForm.form.valid" class="required small">
+                  Completa tu email y contraseña para Iniciar Sesión
+                </span>
+              </div>
+            <div class="col-12 text-center p-0 mt-3">
+              <label>¿No tienes una cuenta?</label>
+              <button type="button" class="btn btn-success btn-lg btn-block" (click)="onNewUser()">Crear Cuenta</button>
+            </div>
+
+          </form>
+        </div>
+        <!-- boton para resgristrar nuevo usuario -->
+        <!-- <div class="my-3">
+
+        </div> -->
+        <!-- iniciar sesion con redes -->
+
+      </div>
+    </div>
+  </div>
+</div>
